--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-auth-session": "~5.5.2",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.1",
     "react": "18.2.0",
@@ -24,8 +26,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "expo-image-picker": "~15.0.7",
-    "expo-auth-session": "~5.5.2"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
